[package]
name = "sb3-wasm"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "WASM helper for extracting Scratch .sb3 scripts"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wasm-minimal-protocol = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
